--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
+@import url(https://fonts.google.com/specimen/Public+Sans);
 @font-face {
   font-family: 'bootle';
   src: url(bottle.TTF);
 
-  @import url(https://fonts.google.com/specimen/Public+Sans);
+  
 
 
 }
@@ -24,9 +25,6 @@ header>nav {
   display: flex;
   align-items: center;
   gap: 26px;
-  /*
-        gap da espacio, al igual al margin da el espacion con resecto a otros elementps
-        */
   padding: 0px 60px 8px 10px;
   position: absolute;
   top: 90px;
@@ -41,6 +39,7 @@ header>img {
 
 
 }
+
 
 html {
   scroll-behavior: smooth;
@@ -57,13 +56,10 @@ body {
 
 
 footer {
-
-  align-self: flex-end;
   background-color: black;
   border-radius: 15px;
-  ;
   padding: 50px;
-  left: 0;
+  bottom: 0;
   width: auto;
   height: 100%;
   color: white;
@@ -230,6 +226,14 @@ p {
   text-decoration-thickness: auto;
   text-decoration-line: underline;
 
+}
+
+a:hover{
+  color: gray;
+}
+
+a:visited{
+  color: black;
 }
 
 
